PIS-19 Added buttons to delete and edit auction

--- a/app/src/AuctionList.css
+++ b/app/src/AuctionList.css
@@ -5,6 +5,11 @@
     width: 70%;
 }
 
+.AuctionList .AuctionListHeader {
+    font-weight: bold;
+    font-size: 20px;
+}
+
 .AuctionList .Auctions {
     display: flex;
     flex-direction: column;
